# TraceFormula

./: .gitattributes  .gitignore  README.md  batch_run.py  batch_run.sage  configure.ac  magma_functions.m  run_tests.m  traces_hashtable.m
.github/workflows/: test.yml
Tests/: MagmaFormula.m  ModSym.m  magma_tests.m
TraceFormula/: Makefile  hello_world  traceAL-dyn  traceALbatch-dyn  traceALbatch.c  traces.m
data/: traces_10007.m  traces_10009.m  traces_10037.m  traces_10039.m  traces_10061.m  traces_10067.m  traces_10069.m  traces_10079.m  traces_1009.m  traces_10091.m  traces_10093.m  traces_10099.m  traces_101.m  traces_10103.m  traces_10111.m  traces_1013.m  traces_10133.m  traces_10139.m  traces_10141.m  traces_10151.m  traces_10159.m  traces_10163.m  traces_10169.m  traces_10177.m  traces_10181.m  traces_1019.m  traces_10193.m  traces_1021.m  traces_10211.m  traces_10223.m  traces_10243.m  traces_10247.m  traces_10253.m  traces_10259.m  traces_10267.m  traces_10271.m  traces_10273.m  traces_10289.m  traces_103.m  traces_10301.m  (+9553 more)
src/: Makefile  Makefile.am  extgcd-dyn  main.cc  mftrace.c  mftrace.h  primes_100000.py  traceAL.c  traceAL_sta_dbg  traceAL_tools.c  traceAL_tools.h  traceALbatch.c  traceALbatch_sta_dbg  traces.m  traces_hashtable.sig
